# battery-oracle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: TODO.md
.github/workflows/: ci.yml  docs.yml  slow-tests.yml
docs/: calibration.md  conf.py  degradation.md  divergences.md  index.md  install.md  models.md  numerics.md  protocol.md  references.bib  references.md  usage.md
docs/_static/degradation/: degradation_data.json
docs/_static/numerics/: numerics_data.json
docs/api/: index.rst
docs/notebooks/: 01_oracle_tuning_calibration.ipynb  02_demonstrations.ipynb
notebooks/: 01_oracle_tuning_calibration.ipynb  02_demonstrations.ipynb  README.md  config_oracle_demo.yml  config_oracle_jones2022.yml
notebooks/tune_demo_outputs/: calibration_summary.json  config_oracle_demo.yml  config_oracle_demo_engine.yml  sweep_results.csv
src/battery_oracle/: __init__.py  _circuit.py  _plotting.py  config_experiment_defaults.yml  config_oracle_calce.yml  config_oracle_defaults.yml  config_oracle_matr.yml  config_oracle_oxford.yml  experiment.py  oracle.py  protocol.py  tune.py  tune_plots.py
src/battery_oracle/_eis/: __init__.py  drt.py  kk.py  noise.py
tests/: test_api.py  test_experiment.py  test_oracle_smoke.py  test_tune_plots.py  test_tune_smoke.py
